# plugin-recomp-repro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  plugin-recomp-repro.cabal
app/: Main.hs
src/: Plugin.hs
