cabal-version:   3.0
name:            plugin-recomp-repro
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Yura Lazaryev
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Plugin
    build-depends:    base ^>=4.17.2.1, ghc
    hs-source-dirs:   src
    default-language: GHC2021

executable plugin-recomp-repro
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        plugin-recomp-repro,
        template-haskell

    hs-source-dirs:   app
    default-language: GHC2021

test-suite plugin-recomp-repro-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        plugin-recomp-repro
